--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "firebase": "^10.8.1",
     "firebase-admin": "^12.0.0",
+    "nanoid": "^5.0.6",
     "next": "14.1.2",
+    "qrcode.react": "^3.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "server-only": "^0.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
