--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "next": "14.1.2",
     "qrcode.react": "^3.1.0",
     "react": "^18",
+    "react-calendar": "^4.8.0",
     "react-dom": "^18",
+    "recharts": "^2.12.3",
     "server-only": "^0.0.1"
   },
   "devDependencies": {
