feat: add loading skeleton for dashboard

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,8 @@
             "@lib/*": ["./src/app/lib/*"],
             "@firebase/*": ["./src/app/lib/firebase/*"],
             "@context/*": ["./src/app/context/*"],
-            "@utilities/*": ["./src/app/lib/utilities/*"]
+            "@utilities/*": ["./src/app/lib/utilities/*"],
+            "@skeletons/*" : ["./src/app/ui/skeletons/*"]
         }
     },
     "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
