--- a/package.json
+++ b/package.json
@@ -1,34 +1,39 @@
 {
-  "name": "trimmer-test",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "firebase": "^10.8.1",
-    "firebase-admin": "^12.0.0",
-    "nanoid": "^5.0.6",
-    "next": "14.1.2",
-    "qrcode.react": "^3.1.0",
-    "react": "^18",
-    "react-calendar": "^4.8.0",
-    "react-dom": "^18",
-    "recharts": "^2.12.3",
-    "server-only": "^0.0.1"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.2",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
-  }
+    "name": "trimmer-test",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "test": "vitest"
+    },
+    "dependencies": {
+        "firebase": "^10.8.1",
+        "firebase-admin": "^12.0.0",
+        "nanoid": "^5.0.6",
+        "next": "14.1.2",
+        "qrcode.react": "^3.1.0",
+        "react": "^18",
+        "react-calendar": "^4.8.0",
+        "react-dom": "^18",
+        "recharts": "^2.12.3",
+        "server-only": "^0.0.1"
+    },
+    "devDependencies": {
+        "@testing-library/react": "^14.2.2",
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "@vitejs/plugin-react": "^4.2.1",
+        "autoprefixer": "^10.0.1",
+        "eslint": "^8",
+        "eslint-config-next": "14.1.2",
+        "jsdom": "^24.0.0",
+        "postcss": "^8",
+        "tailwindcss": "^3.3.0",
+        "typescript": "^5",
+        "vitest": "^1.4.0"
+    }
 }
