--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
         "react-calendar": "^4.8.0",
         "react-dom": "^18",
         "recharts": "^2.12.3",
-        "server-only": "^0.0.1"
+        "server-only": "^0.0.1",
+        "vite-tsconfig-paths": "^4.3.2"
     },
     "devDependencies": {
+        "@testing-library/jest-dom": "^6.4.2",
         "@testing-library/react": "^14.2.2",
+        "@testing-library/user-event": "^14.5.2",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
