--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "react": "^18",
         "react-calendar": "^4.8.0",
         "react-dom": "^18",
+        "react-toastify": "^10.0.5",
         "recharts": "^2.12.3",
         "server-only": "^0.0.1",
         "vite-tsconfig-paths": "^4.3.2"
