--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "test": "vitest"
     },
     "dependencies": {
+        "@types/react-slick": "^0.23.13",
         "firebase": "^10.8.1",
         "firebase-admin": "^12.0.0",
         "nanoid": "^5.0.6",
@@ -18,9 +19,11 @@
         "react": "^18",
         "react-calendar": "^4.8.0",
         "react-dom": "^18",
+        "react-slick": "^0.30.2",
         "react-toastify": "^10.0.5",
         "recharts": "^2.12.3",
         "server-only": "^0.0.1",
+        "slick-carousel": "^1.8.1",
         "vite-tsconfig-paths": "^4.3.2"
     },
     "devDependencies": {
